--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.68.2
-sqlalchemy==1.4.27
-pydantic==1.8.2
-uvicorn==0.15.0
-psycopg2-binary==2.9.2
+fastapi
+sqlalchemy
+pydantic
+uvicorn
+psycopg2-binary
