--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi==0.68.2
-sqlalchemy==1.4.27
-pydantic==1.8.2
-uvicorn==0.15.0
 psycopg2-binary
+fastapi
+sqlalchemy
+pydantic
+pydantic[email]
+uvicorn
